--- a/landing/custom/kameloso/public/index.html
+++ b/landing/custom/kameloso/public/index.html
@@ -10,11 +10,11 @@
     <main>
         <h1>kamelåså</h1>
         <form method="POST" action="/api/enqueue">
-            <button type="submit">add url</button><input
+            <button type="submit">add url</button><input title="input url"
                 id="enqueue-url-input" name="url" type="text">
         </form>
         <form method="POST" action="/api/upload" enctype="multipart/form-data">
-            <button type="submit">add file</button><input 
+            <button type="submit">add file</button><input title="insert file"
                 id="upload-input" name="file" type="file">
         </form>
         <form method="POST" action="/api/playlist/next">
